# imfp

./: .gitignore  News  README.ipynb  README.md  _quarto.yml  changelog.md  imfp_demo.qmd  imfp_demo.quarto_ipynb  index.qmd  mypy.ini  pyproject.toml
.github/workflows/: dev.yml  format.yml  main.yml  publish.yml  release.yml  test.yml
data/: IFS.NGDP_D_SA_IX.csv  IFS.NGDP_XDC.csv  IFS.pickle  databases.csv
demo/: imfp_demo.qmd
demo/data/: IFS.NGDP_XDC.csv  databases.csv
demo/demo/: About.qmd  _quarto.yml  imfp_demo.qmd
demo/demo/.quarto/_freeze/Code/imfp_demo/execute-results/: html.json
demo/demo/.quarto/_freeze/imfp_demo/execute-results/: html.json
demo/demo/.quarto/idx/: About.qmd.json  imfp_demo.qmd.json  listing.qmd.json
demo/demo/.quarto/idx/posts/posts/: Blog.qmd.json
demo/demo/.quarto/listing/: listing-cache.json
demo/demo/.quarto/xref/: 26cae9f1  5975fc49  INDEX  d8ecc55e
demo/demo/Code/data/: GENDER_EQUALITY.pickle  IFS.LP_PE_NUM.csv  IFS.NGDP_D_SA_IX.csv
demo/demo/_site/: About.html  imfp_demo.html  index.html  listing.html  listings.json  search.json
demo/demo/_site/About/: About.html
demo/demo/_site/Blog/blog/: Blog.html
demo/demo/_site/Blog/post/: listing.html
demo/demo/_site/Code/: imfp_demo.html
demo/demo/_site/posts/blog/: Blog.html  listing.html
demo/demo/_site/posts/post-with-code/: index.html
demo/demo/_site/posts/posts/: Blog.html
demo/demo/_site/posts/welcome/: index.html
demo/demo/data/: GENDER_EQUALITY.GE_GII.csv
demo/demo/posts/posts/: Blog.qmd
docs/: databases.qmd  datasets.qmd  demo.qmd  index.html  installation.qmd  listings.json  parameters.qmd  rate_limits.qmd  search.json  usage.qmd
docs/data/: IFS.NGDP_D_SA_IX.csv  IFS.NGDP_XDC.csv  databases.csv
docs/demo/demo/: About.html  imfp_demo.html  listing.html
docs/demo/demo/posts/posts/: Blog.html
docs/imfp/: data.html
docs/static/: llms.txt
experimental/: download_databases.py  download_indicators.py
imfp/: admin.py  data.py  utils.py
tests/: test_admin.py  test_data.py  test_utils.py
