[tool.poetry]
name = "imfp"
version = "1.1.4"
description = "Python package for downloading economic data from the International Monetary Fund JSON RESTful API endpoint."
authors = ["Christopher C. Smith <christopher.smith@promptlytechnologies.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://promptlytechnologies.com/imfp"
repository = "https://github.com/Promptly-Technologies-LLC/imfp"
keywords = ["economics", "finance", "IMF", "API"]
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
  { include = "imfp" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
numpy = "^2.1.1"
statsmodels = "^0.14.4"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
responses = "^0.23.1"
pytest = "^7.2.2"
pytest-runner = "^6.0.0"
black = "^24.3.0"
pytest-mock = "^3.10.0"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
quarto = "^0.1.0"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"