[project]
name = "imfp"
version = "1.1.4"
description = "Python package for downloading economic data from the International Monetary Fund JSON RESTful API endpoint."
authors = [
    {name = "Christopher C. Smith", email = "christopher.smith@promptlytechnologies.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["economics", "finance", "IMF", "API"]
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy == 2.1.3",
    "pandas == 2.2.3",
    "requests == 2.32.3",
    "statsmodels == 0.14.4",
    "tabulate == 0.9.0"]

[project.urls]
homepage = "https://promptlytechnologies.com/imfp"
repository = "https://github.com/Promptly-Technologies-LLC/imfp"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "responses == 0.23.3",
    "pytest == 7.4.4",
    "pytest-runner == 6.0.1",
    "black == 24.10.0",
    "pytest-mock == 3.14.0",
    "jupyter == 1.1.1",
    "seaborn == 0.13.2",
    "quarto == 0.1.0",
    "scikit-learn == 1.5.2"]

[tool.setuptools]
packages = ["imfp"]

[tool.uv]
default-groups = ["dev"]